--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -3,98 +3,100 @@
 /*Container Video and Pharase*/
 
 .header-video {
-    width: 100%;
-    height: 80vh;
+	width: 100%;
+	height: 80vh;
+	top: 0;
 }
 
 .tunnel {
-    background-color: #00ffd956;
-    position: absolute;
-    left: 0px;
-    max-width: 100%;
-    max-height: 100%;
-    width: 125%;
-    height: 125%;
-    object-fit: cover;
-    z-index: -99;
-    overflow: hidden;
+	background-color: #00ffd956;
+	position: relative;
+	max-width: 100%;
+	max-height: 100%;
+	width: 200%;
+	height: 200%;
+	object-fit: cover;
+	z-index: -99;
+	overflow: hidden;
+	top: 0;
+	left: 0;
 }
 
 /*PRINCIPAL PHRASE (Not artistic, unrealistic, unsafe a little, not those things)*/
 .showcase {
-    position: absolute;
-    display: flex;
-    top: 150px;
-    left: 0;
-    flex-wrap: wrap;
-    margin: 0 15px;
-    width: 700px; /* horizontal ------ */
-    height: 350px; /* vertical | */
+	position: absolute;
+	display: flex;
+	top: 135px;
+	left: 0;
+	flex-wrap: wrap;
+	margin: 0 15px;
+	width: 700px; /* horizontal ------ */
+	height: 350px; /* vertical | */
 }
 
 .showcase h2 {
-    font-size: 60px;
-    font-weight: bold;
+	font-size: 60px;
+	font-weight: bold;
 }
 
 /*PHRASE S E P A R A T E*/
 .not-artistic {
-    margin-right: 10px;
-    transition: 0.3s ease all;
+	margin-right: 10px;
+	transition: 0.3s ease all;
 }
 .not-artistic:hover {
-    color: #05fdd8;
-    animation: 0.3s shake infinite alternate;
+	color: #05fdd8;
+	animation: 0.3s shake infinite alternate;
 }
 
 .unrealistic {
-    margin-right: 10px;
-    transition: 0.3s ease all;
+	margin-right: 10px;
+	transition: 0.3s ease all;
 }
 .unrealistic:hover {
-    color: #05fdd8;
-    animation: 0.3s shake infinite alternate;
+	color: #05fdd8;
+	animation: 0.3s shake infinite alternate;
 }
 
 .unsafe-a-little {
-    margin-right: 10px;
-    transition: 0.3s ease all;
+	margin-right: 10px;
+	transition: 0.3s ease all;
 }
 .unsafe-a-little:hover {
-    color: #05fdd8;
-    animation: 0.3s shake infinite alternate;
+	color: #05fdd8;
+	animation: 0.3s shake infinite alternate;
 }
 
 .not-those-things {
-    margin-right: 10px;
-    transition: 0.3s ease all;
+	margin-right: 10px;
+	transition: 0.3s ease all;
 }
 .not-those-things:hover {
-    color: #fd2155;
-    text-decoration: line-through;
-    text-decoration-color: #05fdd8;
-    animation: 0.3s shake infinite alternate;
+	color: #fd2155;
+	text-decoration: line-through;
+	text-decoration-color: #05fdd8;
+	animation: 0.3s shake infinite alternate;
 }
 
 @keyframes shake {
-    0% {
-        transform: skewX(-15deg);
-    }
-    5% {
-        transform: skewX(15deg);
-    }
-    10% {
-        transform: skewX(-15deg);
-    }
-    15% {
-        transform: skewX(15deg);
-    }
-    20% {
-        transform: skewX(0deg);
-    }
-    100% {
-        transform: skewX(0deg);
-    }
+	0% {
+		transform: skewX(-15deg);
+	}
+	5% {
+		transform: skewX(15deg);
+	}
+	10% {
+		transform: skewX(-15deg);
+	}
+	15% {
+		transform: skewX(15deg);
+	}
+	20% {
+		transform: skewX(0deg);
+	}
+	100% {
+		transform: skewX(0deg);
+	}
 }
 
 /*END OF PHRASE S E P A R A T E*/
@@ -103,78 +105,88 @@
 
 /*GLITCH EFFECT*/
 .what-i-pretend {
-    font-size: 20px;
-    letter-spacing: 12.5px;
-    font-weight: 700;
-    width: 700px;
-    border-top: 5px solid #fff;
-    text-align: center;
-    text-shadow: 2.2px 0 0 rgba(255, 30, 0, 0.75),
-    -1.5px -1.3px 0 rgba(0, 255, 149, 0.75),
-    1.5px 1.3px 0 rgba(0, 238, 255, 0.75);
+	font-size: 20px;
+	letter-spacing: 12.5px;
+	font-weight: 700;
+	width: 700px;
+	border-top: 5px solid #fff;
+	text-align: center;
+	text-shadow: 2.2px 0 0 rgba(255, 30, 0, 0.75),
+		-1.5px -1.3px 0 rgba(0, 255, 149, 0.75),
+		1.5px 1.3px 0 rgba(0, 238, 255, 0.75);
 }
 
 @keyframes glitch {
-    0% {
-        text-shadow: 2.2px 0 0 rgba(255, 30, 0, 0.75),
-        -1.5px -1.3px 0 rgba(0, 255, 149, 0.75),
-        1.5px 1.3px 0 rgba(0, 238, 255, 0.75);
-    }
-    15% {
-        text-shadow: -2.2px -1.3px 0 rgba(255, 30, 0, 0.75),
-        1.5px 1.3px 0 rgba(0, 255, 149, 0.75),
-        -1.5px -1.3px 0 rgba(0, 238, 255, 0.75);
-    }
-    50% {
-        text-shadow: 2.5px 0 1.3px rgba(255, 30, 0, 0.75),
-        -1.9px -2.3px 0 rgba(0, 255, 149, 0.75),
-        2.1px 2px 0 rgba(0, 238, 255, 0.75);
-    }
-    100% {
-        text-shadow: -2.1px -1.3 0 rgba(255, 30, 0, 0.75),
-        1.8px 1.9px 0 rgba(0, 255, 149, 0.75),
-        -2px -1.2px 0 rgba(0, 238, 255, 0.75);
-    }
+	0% {
+		text-shadow: 2.2px 0 0 rgba(255, 30, 0, 0.75),
+			-1.5px -1.3px 0 rgba(0, 255, 149, 0.75),
+			1.5px 1.3px 0 rgba(0, 238, 255, 0.75);
+	}
+	15% {
+		text-shadow: -2.2px -1.3px 0 rgba(255, 30, 0, 0.75),
+			1.5px 1.3px 0 rgba(0, 255, 149, 0.75),
+			-1.5px -1.3px 0 rgba(0, 238, 255, 0.75);
+	}
+	50% {
+		text-shadow: 2.5px 0 1.3px rgba(255, 30, 0, 0.75),
+			-1.9px -2.3px 0 rgba(0, 255, 149, 0.75),
+			2.1px 2px 0 rgba(0, 238, 255, 0.75);
+	}
+	100% {
+		text-shadow: -2.1px -1.3 0 rgba(255, 30, 0, 0.75),
+			1.8px 1.9px 0 rgba(0, 255, 149, 0.75),
+			-2px -1.2px 0 rgba(0, 238, 255, 0.75);
+	}
 }
 
 .what-i-pretend:hover {
-    animation: glitch 0.5s infinite;
+	animation: glitch 0.5s infinite;
 }
 
 /*MOVIL VIEW (RESPONSIVE SETTINGS)*/
 
-@media (max-width: 1022px) {
-    /*Video Tunnel Loop*/
+@media (max-width: 1000px) {
+	/*Video Tunnel Loop*/
 
-    .tunnel {
-        width: 100%;
-        height: 100%;
-    }
-    #particles-js {
-        background-color: #1d1d1d;
-        height: 80vh;
-        width: 100%;
-        position: absolute;
-        top: 30px;
-        z-index: -100;
-    }
-    /*(Not artistic, unrealistic, unsafe a litlle, not those things)*/
+	.tunnel {
+	}
 
-    .showcase {
-        margin: 0 80px;
-        width: auto;
-        height: auto;
-        top: 100px;
-        text-align: center;
-        justify-content: center;
-    }
-    .showcase.hide {
-        z-index: 0;
-    }
-    .showcase h2 {
-        font-size: 50px;
-    }
-    .what-i-pretend {
-        width: auto;
-    }
+	/*(Not artistic, unrealistic, unsafe a litlle, not those things)*/
+
+	.showcase {
+		margin: 0 80px;
+		width: auto;
+		height: auto;
+		top: 100px;
+		text-align: center;
+		justify-content: center;
+	}
+
+	.showcase h2 {
+		font-size: 45px;
+	}
+	.what-i-pretend {
+		width: auto;
+	}
+}
+@media (max-width: 650px) {
+	.showcase h2 {
+		font-size: 40px;
+	}
+	.what-i-pretend {
+		font-size: 15px;
+	}
+	.header-video {
+		height: 80vh;
+	}
+	.showcase {
+		margin: 0 15px;
+		top: 21vh;
+	}
+	.tunnel {
+		max-width: 100%;
+		max-height: 99.3%;
+		width: 150%;
+		height: 150%;
+	}
 }
