--- a/src/components/shared/Modal/index.css
+++ b/src/components/shared/Modal/index.css
@@ -1,28 +1,28 @@
 .modal {
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
 }
 
 .modal-main {
-    position:fixed;
-    z-index: 101;
-    background: white;
-    width: 80%;
-    height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+	position: fixed;
+	z-index: 101;
+	background: #181818;
+	width: 80%;
+	height: 80vh;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .display-block {
-    display: block;
+	display: block;
 }
 
 .display-none {
-    display: none;
+	display: none;
 }
