--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -7,17 +7,21 @@
 .tab__button {
 	font-family: 'Oswald', sans-serif;
 	font-size: 30px;
-	border: none;
 	outline: none;
 	color: #fff;
 	cursor: pointer;
-	border-bottom: 2px solid black;
+	border-bottom: 2px solid rgb(255, 255, 255);
 	width: 150px;
 	background-color: #181818;
 	border-color: inherit;
-	border-style: none;
 }
 
 .tab__button.selected {
 	color: blueviolet;
+}
+.tab__button__container button {
+	border: none;
+}
+.download_img {
+	height: 50vh;
 }
