--- a/src/components/shared/Modal/index.css
+++ b/src/components/shared/Modal/index.css
@@ -17,6 +17,17 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	padding: 15px;
+}
+.close__button {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	border: none;
+	background-color: transparent;
+	color: #fff;
+	font-size: 30px;
+	cursor: pointer;
 }
 
 .display-block {
