--- a/src/components/archive/Hero/index.css
+++ b/src/components/archive/Hero/index.css
@@ -2,6 +2,25 @@
 	width: 100%;
 	height: 80vh;
 	top: 0;
+	border: solid red 5px;
+}
+.archive_info {
+	border: solid rgb(119, 0, 255) 5px;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 20vh;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
+.archive_info h1 {
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	border: solid rgb(238, 255, 0) 2px;
+	font-weight: 500;
 }
 .hero_cover {
 	opacity: 0.5;
@@ -10,6 +29,7 @@
 	max-height: 100%;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	object-fit: cover;
 	z-index: -99;
 	top: 0;
