--- a/src/components/monToFri/Hero/index.css
+++ b/src/components/monToFri/Hero/index.css
@@ -183,6 +183,7 @@
 	.mon-to-fri_counter {
 		width: auto;
 		max-width: 700px;
+		height: auto;
 	}
 	.num_weeks {
 		display: flex;
@@ -212,5 +213,6 @@
 	}
 	.mon-to-fri_description {
 		font-size: 15px;
+		height: 130px;
 	}
 }
