--- a/src/components/archive/Hero/index.css
+++ b/src/components/archive/Hero/index.css
@@ -24,9 +24,9 @@
 }
 .hero_cover {
 	opacity: 0.5;
-	position: relative;
+	position: absolute;
 	max-width: 100%;
-	max-height: 100%;
+	max-height: 80vh;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
