--- a/src/components/archive/Photography/index.css
+++ b/src/components/archive/Photography/index.css
@@ -18,6 +18,7 @@
 	height: 100%;
 	max-height: 30vh;
 	width: 100%;
+	position: relative;
 }
 
 .gallery-image {
@@ -30,4 +31,25 @@
 
 .gallery-image:hover {
 	transform: scale(1.15);
+}
+
+.item__info {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #1d1d1d;
+	opacity: 0;
+	transition: .5s all ease;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 1rem;
+}
+
+.gallery-item:hover .item__info {
+	opacity: .8;
 }
