--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /*Reset*/
 * {
 	box-sizing: border-box;
-	margin: 0 0;
+	margin: 0;
 	padding: 0;
 }
 
@@ -14,9 +14,9 @@ html {
 body {
 	font-family: 'Oswald', sans-serif;
 	margin: 0;
+	min-height: 100%;
 	background-color: #1d1d1d;
 	color: #ffffff;
-
 	cursor: auto;
 }
 
@@ -26,7 +26,13 @@ body.home {
 	overflow: hidden;
 }
 
+body.about {
+	display: grid;
+	width: 100%;
+}
+
 #root {
+	min-height: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
