--- a/src/components/about/Hero/index.css
+++ b/src/components/about/Hero/index.css
@@ -1,16 +1,16 @@
 .about_hero {
 	width: 100%;
-	height: 80vh;
+	height: 100%;
 	border: #05fdd8 solid 5px;
+	overflow: hidden;
 }
 .about {
-	padding: 30px;
-	gap: 30px;
+	padding: 0;
+	gap: 10px;
 	display: flex;
-	border: hotpink solid 5px;
+	border: #ffe600 solid 5px;
 	width: 100%;
-	height: 65vh;
-
+	height: 100%;
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
@@ -68,15 +68,15 @@
 /*I'm Jesús Hernández*/
 .about_container {
 	display: block;
-	width: 600px;
+	width: 700px;
 	height: auto;
-	border: rgb(255, 255, 255) solid 2px;
+	border: rgb(142, 75, 255) solid 2px;
 }
 .i_am_container {
 	display: flex;
 	letter-spacing: 10px;
 	justify-content: center;
-	text-align: right;
+
 }
 
 .i_am {
@@ -101,7 +101,7 @@
 @media (max-width: 1000px) {
 	.about_container {
 		width: auto;
-		margin: 0 15px;
+		padding: 0 5px;
 	}
 	.MyselfPic {
 		width: 170px;
@@ -111,16 +111,11 @@
 		flex-wrap: wrap;
 	}
 	.i_am {
-		font-size: 30px;
+		font-size: 25px;
 	}
-	.about {
-		height: 70vh;
-	}
+
 	.about_container p {
-		font-size: 15px;
+		font-size: 12.5px;
 	}
-	.about_hero {
-		padding: 15px 0;
-		gap: 15px;
-	}
+
 }
