--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -10,15 +10,15 @@
 .tunnel {
 	background-color: #00ffd956;
 	position: relative;
-	max-width: 100%;
-	max-height: 100%;
-	width: 200%;
-	height: 200%;
+	/*max-width: 100%;*/
+	/*max-height: 100%;*/
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	z-index: -99;
 	overflow: hidden;
-	top: 0;
-	left: 0;
+	/*top: 0;*/
+	/*left: 0;*/
 }
 
 /*PRINCIPAL PHRASE (Not artistic, unrealistic, unsafe a little, not those things)*/
