--- a/src/components/archive/Photography/index.css
+++ b/src/components/archive/Photography/index.css
@@ -16,9 +16,11 @@
 	overflow: hidden;
 	border: springgreen solid 4px;
 	height: 100%;
-	max-height: 30vh;
+	max-height: 50vh;
+max-width: 50vh;
 	width: 100%;
 	position: relative;
+
 }
 
 .gallery-image {
