--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -28,10 +28,10 @@
 .tab__panel {
 	display: flex;
 	border: #fff solid 3px;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	padding: 15px;
-	height: 80vh;
+	height: 90%;
 }
 .tab__panel div {
 	width: 275px;
@@ -51,12 +51,22 @@
 
 	border: rgb(0, 255, 42) solid 0.5px;
 }
-.tab__panel img {
+.download_img{
+	height: 100%;
+	align-items: center;
+	justify-content: center;
 	position: relative;
-	max-width: 30vw;
-	width: auto;
-	height: auto;
+}
+.tab__panel img {
+	position: absolute;
+	width: 100%;
 	object-fit: cover;
+	align-items: center;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 .tab__panel i {
 	border: #fff solid 2px;
@@ -64,6 +74,25 @@
 	width: auto;
 	cursor: pointer;
 }
+.tab__panel_2{
+	border: #ff00c8 solid 3px;
+position: relative;
+	width: 100%;
+	height: 90%;
+	overflow: hidden;
+}
+.tab__panel_2 img{
+	position: absolute;
+	max-width: 100%;
+	max-height: 100%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	object-fit: cover;
+}
+
 
 .tab__button.selected {
 	color: #05fdd8;
@@ -78,7 +107,7 @@
 	align-items: center;
 	justify-content: center;
 	border: yellowgreen solid 5px;
-	height: 80vh;
+	height: 90%;
 }
 .tools {
 	width: auto;
@@ -91,23 +120,19 @@
 	max-height: 100%;
 	display: flex;
 	border: red solid 3px;
-
 	position: relative;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	width: 100%;
 	height: auto;
 }
 .logos img {
-
 	width: auto;
 	border: rgb(114, 0, 0) solid 3px;
-	margin: 0 30px;
 	background-size: contain;
 	max-width: 10vw;
-	min-width: 10vw;
+	min-width: 100px;
 	width: auto;
-	height: auto;
 	object-fit: cover;
 }
 .logos figcaption{
@@ -146,11 +171,12 @@
 .tab__panel {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	height: auto;
+	justify-content: space-around;
+	height: 100%;
 	align-items: center;
 	padding: 15px;
 }
+
 	.tab__panel i {
 		border: #fff solid 2px;
 		font-size: 45px;
@@ -160,8 +186,19 @@
 	.tab__button p{
 		display: none;
 	}
+
 	.tab__button i{
 		display: flex;
+	}
+	.tab__panel h1 {
+
+		font-size: 25px;
+		text-align: center;
+		width: auto;
+	}
+	.tab__panel p {
+		font-size: 15px;
+		width: auto;
 	}
 
 
