--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	font-family: 'Oswald', sans-serif;
+	font-family: "Oswald", sans-serif;
 	margin: 0;
 	min-height: 100%;
 	background-color: #1d1d1d;
