--- a/src/components/archive/Photography/index.css
+++ b/src/components/archive/Photography/index.css
@@ -5,34 +5,25 @@
 }
 
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
-	grid-gap: 15px;
-	margin: 15px 0;
+	columns: 4 170px;
+	column-gap: .5em;
+	border: #ff00c8 solid 5px;
 }
-.gallery-item {
-	flex: 12rem;
-	box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
-	overflow: hidden;
-	border: springgreen solid 4px;
-	height: 100%;
-	max-height: 50vh;
-max-width: 50vh;
-	width: 100%;
-	position: relative;
 
+.gallery-item {
+	position: relative;
+	margin-bottom: 0.5em;
 }
 
 .gallery-image {
+	max-width: 100%;
 	display: block;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	transition: transform 400ms ease-out;
+	outline: #05fdd8 solid 2.5px;
+	outline-offset: -5px;
 }
 
 .gallery-image:hover {
-	transform: scale(1.15);
+
 }
 
 .item__info {
@@ -49,9 +40,5 @@ max-width: 50vh;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 1rem;
-}
 
-.gallery-item:hover .item__info {
-	opacity: .8;
 }
