--- a/src/components/shared/NavBar/index.css
+++ b/src/components/shared/NavBar/index.css
@@ -1,9 +1,9 @@
 .ham {
-	position: fixed;
+	position: absolute;
 	cursor: pointer;
 	font-size: 30px;
 	top: 30px;
-	right: 30px;
+	right: 60px;
 	background-color: transparent;
 	display: none;
 	z-index: 99;
