--- a/src/views/MonToFri/index.css
+++ b/src/views/MonToFri/index.css
@@ -3,7 +3,7 @@
 }
 @media screen and (min-width: 1200px) {
     .mon-to-fri__layout {
-        border: 1px solid red;
+
         display: grid;
         grid-template-columns: 1fr 100px;
     }
@@ -33,7 +33,7 @@
     }
 
     .weeks__nav li.active a{
-        color:red;
+        color:#ffe600;
 
     }
 }
