--- a/src/components/about/Hero/index.css
+++ b/src/components/about/Hero/index.css
@@ -1,21 +1,21 @@
 .about_hero {
 	width: auto;
 	height: 100%;
-	border: #05fdd8 solid 5px;
+
 	overflow: hidden;
 	justify-content: center;
 }
 .about {
 	padding: 0;
 	display: flex;
-	border: #ffe600 solid 5px;
 	width: 100%;
 	height: 100%;
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 	overflow: hidden;
-	top: 0;
+
+
 }
 .about_hero .backimg {
 	max-width: 100%;
@@ -31,7 +31,6 @@
 
 /*COVER IMG*/
 .MyselfPic {
-	border: 2.5px solid #ff00c8;
 	width: 300px;
 	height: 300px;
 	position: relative;
@@ -71,7 +70,8 @@
 	display: block;
 	width: 60vw;
 	height: auto;
-	border: rgb(142, 75, 255) solid 2px;
+
+	margin-bottom: 80px;
 
 
 }
@@ -83,7 +83,7 @@
 }
 
 .i_am {
-	border: springgreen solid 1px;
+
 	transition: 0.3s ease all;
 	font-size: 40px;
 	text-align: justify;
@@ -94,7 +94,7 @@
 }
 /*description*/
 .about_container p {
-	border: rgb(0, 204, 255) solid 1px;
+
 	font-size: 20px;
 }
 .about_container p:hover {
@@ -109,7 +109,8 @@
 	.MyselfPic {
 		width: 170px;
 		height: 170px;
-		bottom: 0;
+
+
 	}
 	.i_am_container {
 		flex-wrap: wrap;
@@ -124,9 +125,13 @@
 
 }
 @media (max-width: 500px){
+
 	.about{
 		justify-content: center;
 		align-items: center;
+	}
+	.MyselfPic{
+		bottom: 10px;
 	}
 	.i_am {
 		font-size: 20px;
@@ -134,6 +139,8 @@
 
 	.about_container{
 		width: 100%;
+
+
 	}
 	.about_container p{
 		font-size: 10px;
