Add feature show opening once

--- a/src/components/shared/NavBar/index.css
+++ b/src/components/shared/NavBar/index.css
@@ -124,7 +124,7 @@
 		position: fixed;
 		top: 5px;
 		right: 15px;
-		transition: 0.2s 0.1s;
+		transition: transform 0.2s 0.1s, top 1.5s linear;
 		z-index: 999;
 	}
 	/* Animaciones para btn ham and close*/
