--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -10,13 +10,10 @@ body.home .nav__bar {
 	position: absolute;
 	left: 0;
 	right: 0;
-	transition: all 2.5s linear;
+	transition: all 1.5s linear;
 	z-index: 30;
 }
 
-body.home .ham {
-	transition: top 2.5s linear;
-}
 
 body.hide-content .nav__bar,
 body.hide-content .ham{
@@ -49,8 +46,8 @@ body.hide-content .tunnel {
 	overflow: hidden;
 	/*top: 0;*/
 	/*left: 0;*/
-	opacity: .7;
-	transition: opacity 2.5s linear;
+	opacity: .5;
+	transition: opacity 1.5s linear;
 }
 
 .particles {
@@ -72,7 +69,7 @@ body.hide-content .tunnel {
 	padding: 0 15px;
 	width: 700px; /* horizontal ------ */
 	height: 350px; /* vertical | */
-	transition: all 2.5s linear;
+	transition: all 1.5s linear;
 	z-index: 20;
 }
 
@@ -199,7 +196,6 @@ body.hide-content .tunnel {
 		padding: 0 80px;
 		width: auto;
 		height: auto;
-		top: 100px;
 		text-align: center;
 		justify-content: center;
 	}
@@ -222,7 +218,8 @@ body.hide-content .tunnel {
 	.showcase {
 		padding: 0 15px;
 		width: 100vw;
-		top: 21vh;
+		top: calc(50vh - 150px);
+
 	}
 	.tunnel {
 		max-width: 100%;
