Fix PostDetails style

--- a/src/components/archive/Photography/index.css
+++ b/src/components/archive/Photography/index.css
@@ -17,7 +17,8 @@
 	max-width: 100%;
 	display: block;
 	outline: #05fdd8 solid 2.5px;
-	outline-offset: -5px;
+	outline-offset: -5px
+
 }
 
 .gallery-image:hover {
