--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -1,85 +1,103 @@
 .tab__button__container {
-	display: flex;
-	justify-content: center;
-	gap: 60px;
-	border: none;
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    border: none;
+
+
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+
 }
+
 .tab__button__container button {
-	background: none;
+    background: none;
+
 }
 
 .tab__button {
-	font-family: 'Oswald', sans-serif;
-	font-weight: normal;
-	letter-spacing: 5px;
-	font-size: 20px;
-	outline: none;
-	color: #fff;
-	cursor: pointer;
-	width: auto;
-	background-color: #181818;
-	border-color: inherit;
+    font-family: 'Oswald', sans-serif;
+    font-weight: normal;
+    letter-spacing: 5px;
+    font-size: 20px;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    width: auto;
+    background-color: #181818;
+    border-color: inherit;
 
 
 }
+
 .tab__button:hover {
-	color: #05fdd8;
+    color: #05fdd8;
 }
-.tab__panel {
-	display: flex;
-	border: #fff solid 3px;
-	justify-content: space-around;
-	align-items: center;
-	padding: 15px;
-	height: 90%;
-}
-.tab__panel div {
-	width: 275px;
-	border: #05fdd8 solid 3px;
-}
-.tab__panel h1 {
-	border: #05fdd8 solid 3px;
-	font-size: 50px;
-	text-align: center;
-	width: auto;
-}
-.tab__panel p {
-	font-size: 30px;
-	width: auto;
-}
-.tab__panel img {
 
-	border: rgb(0, 255, 42) solid 0.5px;
+.tab__panel {
+    display: flex;
+    background-color: #1d1d1d;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px;
+    height: 90%;
 }
-.download_img{
-	height: 100%;
-	align-items: center;
-	justify-content: center;
-	position: relative;
+
+.tab__panel div {
+    width: 275px;
+
 }
+.tab__panel .download_img{
+    width: 400px;
+}
+
+.tab__panel h1 {
+    font-size: 50px;
+    text-align: center;
+    width: auto;
+}
+
+.tab__panel p {
+    font-size: 30px;
+    width: auto;
+}
+
+
+.download_img {
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
 .tab__panel img {
-	position: absolute;
-	width: 100%;
-	object-fit: cover;
-	align-items: center;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
+    position: absolute;
+    width: 100%;
+    object-fit: cover;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: .5s ease;
 }
+
+
 .tab__panel i {
-	border-bottom: #fff solid 5px;
-	font-size: 90px;
-	width: auto;
-	cursor: pointer;
+    font-size: 90px;
+    width: auto;
+    cursor: pointer;
+    border-bottom: solid #fff 5px;
 }
-.tab__panel_2{
-	border: #ff00c8 solid 3px;
-position: relative;
-	width: 100%;
-	height: 90%;
-	overflow: hidden;
+
+.tab__panel_2 {
+    position: relative;
+    width: 100%;
+    height: 90%;
+    overflow: hidden;
+    background-color: #1d1d1d;
 }
 .tab__panel_2 img{
 	position: absolute;
@@ -95,113 +113,134 @@ position: relative;
 
 
 .tab__button.selected {
-	color: #05fdd8;
+    color: #05fdd8;
 }
+
 .tab__button__container button {
 
-	border: none;
+    border: none;
 
 }
+
 .tab__panel_3 {
-	display: block;
-	align-items: center;
-	justify-content: center;
-	border: yellowgreen solid 5px;
-	height: 90%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
 }
+
 .tools {
-	width: auto;
-	border: #05fdd8 solid 4px;
-	align-items: center;
-	justify-content: center;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    border-bottom: #ffffff solid 3px;
+    border-radius: 10px;
+    background-color: #1d1d1d;
 }
+
 .logos {
-	max-width: 100%;
-	max-height: 100%;
-	display: flex;
-	border: red solid 3px;
-	position: relative;
-	justify-content: space-around;
-	align-items: center;
-	width: 100%;
-	height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    position: relative;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: auto;
+
 }
+
 .logos img {
-	width: auto;
-	border: rgb(114, 0, 0) solid 3px;
-	background-size: contain;
-	max-width: 10vw;
-	min-width: 100px;
-	width: auto;
-	object-fit: cover;
+    width: auto;
+    background-size: contain;
+    max-width: 10vw;
+    min-width: 100px;
+    width: auto;
+    object-fit: cover;
 }
-.logos figcaption{
-	text-align: center;
-	border: #ff00c8 solid 2px;
-	font-size: auto;
-	font-weight: 500;
-	align-items: center;
-	justify-content: center;
+
+.logos figcaption {
+    text-align: center;
+    font-size: auto;
+    font-weight: 500;
+    align-items: center;
+    justify-content: center;
 
 }
+
 .resolution {
-	border: rgb(0, 255, 255) solid 3px;
-	height: 25vh;
-	position: relative;
+    height: 25vh;
+    position: relative;
+    border-bottom: #ffffff solid 3px;
+    border-radius: 10px;
+    background-color: #1d1d1d;
 }
+
 .resolution div {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
+
 .size {
-	height: 25vh;
-	position: relative;
+    height: 25vh;
+    position: relative;
+    border-bottom: #ffffff solid 3px;
+    border-radius: 10px;
+    background-color: #1d1d1d;
 }
+
 .size div {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-@media (max-width: 1000px){
-.tab__panel {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	height: 100%;
-	align-items: center;
-	padding: 15px;
+    position: absolute;
+
+
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-	.tab__panel i {
-		border-bottom: #fff solid 5px;
-		font-size: 45px;
-		width: auto;
-		cursor: pointer;
-	}
-	.tab__button p{
-		display: none;
-	}
+@media (max-width: 1000px) {
+    .tab__panel {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 95%;
+        align-items: center;
+        padding: 15px;
+    }
+    .tab__panel .download_img{
+        width: 275px;
+    }
 
-	.tab__button i{
-		display: flex;
-	}
-	.tab__panel h1 {
+    .tab__panel i {
 
-		font-size: 25px;
-		text-align: center;
-		width: auto;
-	}
-	.tab__panel p {
-		font-size: 15px;
-		width: auto;
-	}
+        font-size: 45px;
+        width: auto;
+        cursor: pointer;
+    }
 
+    .tab__button p {
+        display: none;
+    }
 
+    .tab__button i {
+        display: flex;
+    }
+
+    .tab__panel h1 {
+
+        font-size: 40px;
+        text-align: center;
+        width: auto;
+    }
+
+    .tab__panel p {
+        font-size: 15px;
+        width: auto;
+    }
 
 
 }
