--- a/src/components/wallpapers/Wall/index.css
+++ b/src/components/wallpapers/Wall/index.css
@@ -23,7 +23,11 @@
     opacity: .8;
 }
 
-.download__icon{
-    border-bottom: #fff solid 2.5px;
+.download__icon i{
+    border-bottom: solid #fff 2px;
+    width: 100%;
+    font-weight: bolder;
+    font-size: 25px;
     cursor: pointer;
+    animation: 1s glitch infinite alternate;
 }
