--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -115,6 +115,14 @@ position: relative;
 	align-items: center;
 	justify-content: center;
 }
+
+.download__button {
+	background-color: transparent;
+	border: none;
+	color: white;
+	width: auto;
+}
+
 .logos {
 	max-width: 100%;
 	max-height: 100%;
