--- a/src/components/shared/Modal/index.css
+++ b/src/components/shared/Modal/index.css
@@ -37,10 +37,11 @@
 .display-none {
 	display: none;
 }
-@media (max-width: 1000px){
-	.close__button{
-		font-size: 30px ;
+@media (max-width: 1000px) {
+	.close__button {
+		font-size: 30px;
 
 	}
+}
 
 
